--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,10 @@ jobs:
           echo test, and deploy your project.
       - name: Snyk
         uses: snyk/actions@0.3.0
+      - name: Setup Jira
+        # You may pin to the exact commit or the version.
+        # uses: atlassian/gajira-cli@d64bb926ec760b52c8cf4085cf61d26631862648
+        uses: atlassian/gajira-cli@v2.0.2
+        with:
+          # Version of the CLI to use
+          version: 2.0.2
